# Daemon

./: .env.example  .gitignore  AGENTS.md  Dockerfile  MEMORY_LAYER.md  QUICKSTART.md  README.md  RESUME.md  TRIAGE.md  docker-compose.yml  openwebui_client.html  openwebui_model_enhancer.user.js  pyproject.toml  test_subagents.py
.envsitter/: pepper
.sisyphus/: boulder.json
backend/: Dockerfile
daemon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CURRENT_ISSUES.md  OPEN_QUESTIONS.md  PROJECT_BRIEF.md  PROJECT_CONTEXT.md  ROADMAP.md  TECHNICAL_SPECS.md
frontend/: .dockerignore  Dockerfile  IMPLEMENTATION.md  PWA_CHECKLIST.md  PWA_SETUP.md  next.config.js  package-lock.json  package.json  qa-script.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
migrations/: 001_create_extensions.sql  002_create_users.sql  003_create_conversations.sql  004_create_messages.sql  005_create_memories.sql  006_create_extraction_log.sql  007_seed_default_user.sql  008_update_memories_source_type.sql  009_update_memories_constraints.sql  010_update_users_schema.sql  011_add_memories_embedding_model.sql  012_add_summary_updated_at.sql  013_extend_conversations_messages.sql  014_add_reasoning_columns.sql  015_add_reasoning_model.sql  016_bitemporal_memories.sql
orchestrator/: bootstrap_memories.json  catalog.py  config.py  daemon.py  db.py  guardrails.py  main.py  model_router.py  models.py  models_cache.py  prompts.py  router.py
scripts/: backup_db.cron  backup_db.py  generate_key.py  migrate.py  seed.py
tests/: benchmark_extraction.py  conftest.py  test_chat_history.py  test_chat_stream.py  test_dedup_bitemporal.py  test_dedup_slot_fallback.py  test_extraction.py  test_featured_models.py  (+5 more)
(+314 files in other folders)
