[project]
name = "daemon"
version = "0.1.0"
description = "Daemon AI orchestration system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "litellm>=1.81.1",
    "openai>=1.10.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.40.0",
    "asyncpg>=0.30.0",
    "arq>=0.26.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]
exclude = ["backend", "frontend", "data", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pyright]
venvPath = "."
venv = ".uv-venv"
